# sea-orm-test

./: .gitignore  Cargo.toml  README.md
entity/: Cargo.toml
entity/src/: class.rs  class_course.rs  course.rs  lib.rs  prelude.rs  student.rs
example/: Cargo.toml
example/src/: class.rs  course.rs  lib.rs  main.rs  student.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20250408_093421_create_student.rs  m20250408_093456_create_class.rs  m20250408_093514_create_course.rs  m20250409_074219_create_class_course.rs  m20250409_093741_seeding_course.rs  m20250409_122657_seeding_class.rs  m20250421_024423_seeding_student.rs
script/: create_table_by_migration  make_entity_by_migration
