[workspace]
resolver = "2"

members = [
    "entity",
    "migration",
    "example"
]


[workspace.dependencies]
sea-orm = { version = "1.1.8", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1.44.2", features = ["full"]}
serde = { version = "1.0", features = ["derive"] }
